data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_971.wast
;; 2. **Test Description:**    A loop construct with an `unreachable` instruction inside the loop body, followed by stack manipulation. This tests if breaking out of the loop due to `unreachable` maintains stack integrity.    <br>**Constraint:** Ensure no stack overflow or underflow occurs due to the loop being interrupted by `unreachable`.

(assert_invalid
  (module (func $type-loop-unreachable-with-stack-manipulation (result i32)
    (loop (result i32) (unreachable) (i32.const 1))
  ))
  "type mismatch"
)